tests/baselines/reference/prettyFileWithErrorsAndTabs.errors.txt
[91m● [0m[96mprettyFileWithErrorsAndTabs.ts[0m:[93m3[0m:[93m9[0m  [91mError[0m TS2322
| const x: string = 12;
  [91m      ▔[0m
Type 'number' is not assignable to type 'string'.
[91m● [0m[96mprettyFileWithErrorsAndTabs.ts[0m:[93m4[0m:[93m9[0m  [91mError[0m TS2322
| const y: string = 12;
  [91m      ▔[0m
Type 'number' is not assignable to type 'string'.
[91m● [0m[96mprettyFileWithErrorsAndTabs.ts[0m:[93m5[0m:[93m9[0m  [91mError[0m TS2322
| const z: string = 12;
  [91m      ▔[0m
Type 'number' is not assignable to type 'string'.


==== prettyFileWithErrorsAndTabs.ts (3 errors) ====
    function f() {
    	{
    		const x: string = 12;
    		      ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    		const y: string = 12;
    		      ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    		const z: string = 12;
    		      ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    	}
    }
Found 3 errors in the same file, starting at: prettyFileWithErrorsAndTabs.ts[90m:3[0m

